[build-system]
requires = ["setuptools >= 70", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
version = "0.6.0"
description = "ligotools package for reading LIGO data files"
authors = [
    { name = "Ligo Scientific Collaboration (LSC) and Evangelos Vlahos" }, 
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "h5py",  
  "matplotlib",
  "scipy",
  "ipykernel",
]

keywords = [
    "tools", "ligo", "losc", "readligo", "ligotools",
]

[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/hw3-evangelosvlahos/tree/main"
Issues = "https://github.com/UCB-stat-159-f25/hw3-evangelosvlahos/issues"

[tool.setuptools]
packages = ["ligotools"]

